2021-08/etc/kubernetes/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplilearn-phpinfo-svc
spec:
  ports:
    -
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    simplilearn-phpinfo-key: simplilearn-phpinfo-value
  type: ClusterIP
